# CoreTracer

./: .gitignore  Makefile  README.md
asm/: cacheline_asm.S  cacheline_asm_arm.S  lockfree_asm.S  lockfree_asm_arm.S  ooo_execution.S  ooo_execution_arm.S  prefetch_pollution.S  prefetch_pollution_arm.S  speculative_demo.S  speculative_demo_arm.S  tlb_shootdown.S  tlb_shootdown_arm.S
c_demo/: ache_random_demo.c  store_buffer_demo.c
docs/: deep_cases.md
drivers/: Makefile  affinity_numa_demo.c  bank_conflict_demo.c  cacheline_false_demo.c  deadlock_demo.c  hugepage_numa_demo.c  lockfree_ring_demo.c  memory_barrier_demo.c  percpu_demo.c  preemption_demo.c  tlb_demo.c
rust_demo/: Cargo.toml
rust_demo/src/: lib.rs
