[package]
name = "coretracer-rust-demo"
version = "0.1.0"
edition = "2021"
authors = ["CoreTracer Project"]
description = "High-performance Rust demonstrations for kernel debugging and profiling"
license = "MIT"

[dependencies]
# Low-level memory and threading primitives
libc = "0.2"
nix = "0.27"

# Atomics and lock-free data structures
crossbeam = "0.8"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"

# Performance profiling and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Memory allocation tracking
jemallocator = { version = "0.5", optional = true }

# Async runtime for concurrency testing
tokio = { version = "1.0", features = ["full"], optional = true }

# Hardware performance counters
perf-event = "0.4"

# NUMA topology
hwloc = "0.5"

# Random number generation for benchmarks
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["jemalloc"]
jemalloc = ["jemallocator"]
async = ["tokio"]
all = ["jemalloc", "async"]

[[bin]]
name = "affinity_demo"
path = "src/bin/affinity_demo.rs"

[[bin]]
name = "lockfree_demo"
path = "src/bin/lockfree_demo.rs"

[[bin]]
name = "cacheline_demo"
path = "src/bin/cacheline_demo.rs"

[[bin]]
name = "bank_conflict_demo"
path = "src/bin/bank_conflict_demo.rs"

[[bin]]
name = "perf_benchmark"
path = "src/bin/perf_benchmark.rs"

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "atomic_benchmarks"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true